# matosinhosgrocery

./: .gitignore  001-usecase-boilerplate.md  002-testability-core.md  003-gdrive-filename-convention.md  004-product-tagging.md  README.md  adr-implementations.md  adr-layout.md  adr.md  alembic.ini  matosinhosgrocery.db  overview.md  pyproject.toml
alembic/: env.py
alembic/versions/: 7a5042c6a307_create_initial_tables.py  7b7f2cb32eb2_add_gdrive_filename_to_receipts.py  c166126a17c0_add_tags_to_product_entries.py  c763dfcfd72a_add_parsed_weight_volume_to_product_.py
src/matosinhosgrocery/: config.py  main.py  receipt_routes.py
src/matosinhosgrocery/bot/: auth.py  core.py
src/matosinhosgrocery/bot/handlers/: receipts.py
src/matosinhosgrocery/database/: connection.py
src/matosinhosgrocery/database/models/: __init__.py  base.py  product_entry.py  receipt.py
src/matosinhosgrocery/external_apis/: __init__.py  google_drive_client.py  openai_client.py
src/matosinhosgrocery/schemas/: receipt_schemas.py
src/matosinhosgrocery/services/: receipt_processing_service.py
src/matosinhosgrocery/utils/: __init__.py  filename_utils.py
